# Django-App

Django-App/: .env  Dockerfile  pyproject.toml  requirements.txt
Django-App/mysite/: db.sqlite3
Django-App/mysite/mysite/: settings.py
